<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">City Bikes</string>
    <string name="asset_locale_prefix">en</string>
    <string name="attach_picture_label">Attach picture</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="bikelocations">Racks</string>
    <string name="bikes">Bikes</string>
    <string name="choose_city">Choose city</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="distance">Distance</string>
    <string name="errMsgNoData">Could not contact server. Please try again.</string>
    <string name="freeSlots">Empty</string>
    <string name="hello">Hello World, CityBikes!</string>
    <string name="hideMyLocation">Hide my location</string>
    <string name="insert_sd_card">Insert a SD-card before taking a picture</string>
    <string name="item_brakes">Brakes</string>
    <string name="item_chain">Chain</string>
    <string name="item_frontTyre">Front tyre</string>
    <string name="item_gears">Gears</string>
    <string name="item_handlebars">Handlebars</string>
    <string name="item_lights">Lights</string>
    <string name="item_other">Other</string>
    <string name="item_pedal">Pedal</string>
    <string name="item_rearTyre">Rear tyre</string>
    <string name="item_seat">Seat</string>
    <string name="layerMap">Map</string>
    <string name="layerSat">Satellite</string>
    <string name="loadingRackData">Loading data...</string>
    <string name="map">Map</string>
    <string name="mapView">Map view</string>
    <string name="myLocation">My location</string>
    <string name="news">News</string>
    <string name="offline_maps">Offline maps</string>
    <string name="offline_message">Unable to connect to the Internet. Would you like to open the offline map document?</string>
    <string name="ok">OK</string>
    <string name="preference_file_key">SE.CLEARCHANNEL.CITYBIKES.PREFERENCES</string>
    <string name="preference_last_report_time_key">LastReportTime</string>
    <string name="preference_number_of_reports_key">NumberOfReports</string>
    <string name="refreshMap">Refresh map</string>
    <string name="reports_number_exceeded">Service report limit exceeded, please wait 15 minutes before trying again.</string>
    <string name="reports_number_exceeded_title">Limit exceeded</string>
    <string name="select_error_label">Select...</string>
    <string name="service_lock_number_text">Lock number</string>
    <string name="service_other_information">Other information</string>
    <string name="service_send_report">Send report</string>
    <string name="service_sending">Sending report</string>
    <string name="serviceview">Service</string>
    <string name="submit_error_done_message">Your service report has been sent!</string>
    <string name="submit_error_done_title">Thank you!</string>
    <string name="submit_error_missing_fields">You have not filled out all the required fields. Please make sure you have chosen a problem, station and lock before you proceed.</string>
</resources>
