<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffdddddd" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0sp" android:gravity="right|center" android:id="@id/dummy1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:ems="4" android:layout_alignParentRight="true" />
    <TextView android:textSize="12.0sp" android:gravity="right" android:id="@id/dummy2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:ems="2" android:layout_toLeftOf="@id/dummy1" />
    <TextView android:textSize="12.0sp" android:gravity="right" android:id="@id/dummy3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:ems="2" android:layout_toLeftOf="@id/dummy2" />
    <TextView android:textSize="8.0sp" android:textColor="#ff000000" android:gravity="right" android:id="@id/list_header_distance" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/distance" android:maxLines="1" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <TextView android:textSize="8.0sp" android:textColor="#ff000000" android:gravity="right" android:id="@id/list_header_freeSlots" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bikes" android:maxLines="1" android:layout_toLeftOf="@id/dummy1" android:layout_centerVertical="true" />
    <TextView android:textSize="8.0sp" android:textColor="#ff000000" android:gravity="right" android:id="@id/list_header_bikes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/freeSlots" android:maxLines="1" android:layout_toLeftOf="@id/dummy2" android:layout_centerVertical="true" />
</RelativeLayout>